# slopeffect

./: .gitignore  ARCHITECTURE.md  Cargo.toml  PROTOTYPE_CLEANUP_PLAN.md  README.md  needtobefixedffs.md  package-lock.json
apps/desktop/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: desktop.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/services/: tauriIpc.ts
apps/desktop/src/store/: editorStore.ts
apps/desktop/src/types/: editor.ts
archive/mockup/: README.md  app.js  index.html  package.json  style.css
crates/slopeffect-core/: Cargo.toml
crates/slopeffect-core/src/: lib.rs
crates/slopeffect-media/: Cargo.toml
crates/slopeffect-media/src/: lib.rs
crates/slopeffect-project/: Cargo.toml
crates/slopeffect-project/src/: lib.rs
