[package]
name = "slopeffect-tauri-host"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tauri = { version = "2.0.0-rc", features = ["devtools"] }
slopeffect-core = { path = "../../../crates/slopeffect-core" }
slopeffect-project = { path = "../../../crates/slopeffect-project" }
slopeffect-media = { path = "../../../crates/slopeffect-media" }

[build-dependencies]
tauri-build = { version = "2.0.0-rc" }
